--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ web:
     - redis:redis
   volumes:
     - /usr/src/app/static
+    - ./web:/usr/src/app/
   env_file: .env
   command: /usr/local/bin/gunicorn docker_django.wsgi:application -w 2 -b :8000
 
